objects/Sprint_Item__c.object
<CustomObject>
 <fullName>Sprint_Item__c</fullName>
 <fields>
  <fullName>Backlog__c</fullName>
  <label>Backlog Item</label>
  <referenceTo>Backlog__c</referenceTo>
  <relationshipLabel>Sprint Items</relationshipLabel>
  <relationshipName>Sprint_Items</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <fields>
  <fullName>Sprint__c</fullName>
  <label>Sprint</label>
  <referenceTo>Sprint__c</referenceTo>
  <relationshipLabel>Sprint Items</relationshipLabel>
  <relationshipName>Sprint_Items</relationshipName>
  <relationshipOrder>1</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <fields>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Not Started</fullName>
    </value>
    <value>
     <fullName>In Progress</fullName>
    </value>
    <value>
     <fullName>Complete</fullName>
    </value>
    <value>
     <fullName>Incomplete</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <label>Sprint Item</label>
 <nameField>
  <displayFormat>SI-{000000}</displayFormat>
  <label>Sprint Item Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Sprint Items</pluralLabel>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>